# Network-NineP

./: .boring  .gitignore  Error.hs  FidMap.hs  HighNineP.cabal  HighNineP.hs  Network-NineP.cabal  TODO  Test.hs
.github/workflows/: ci.yml
Control/Monad/: EmbedIO.hs
Network/: NineP.hs
Network/NineP/: Error.hs  File.hs  Server.hs
Network/NineP/File/: Instances.hs
Network/NineP/Internal/: File.hs  Msg.hs  State.hs
