Name:                HighNineP
Version:             0
Description:         High-level 9P library
License:             OtherLicense
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
  Build-Depends:     base >= 4, RBTree >= 0.0.5, bytestring >= 0.9.2.1, containers >= 0.4.2.1, NineP >= 0.0.2
  Exposed-modules:   HighNineP
  ghc-options:       -Wall
